📝 Import bionty instead of lb

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "from lamin_usecases import datasets as ds\n",
     "import scanpy as sc\n",
     "import matplotlib.pyplot as plt\n",
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellType.inspect(adata.obs[\"cell_type_celltypist\"]);"
+    "bt.CellType.inspect(adata.obs[\"cell_type_celltypist\"]);"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.obs[\"cell_type_celltypist\"] = lb.CellType.standardize(\n",
+    "adata.obs[\"cell_type_celltypist\"] = bt.CellType.standardize(\n",
     "    adata.obs[\"cell_type_celltypist\"]\n",
     ")"
    ]
@@ -312,8 +312,8 @@
     "artifact = ln.Artifact.from_anndata(\n",
     "    adata,\n",
     "    description=\"seurat_ifnb_activated_Bcells\",\n",
-    "    field=lb.Gene.symbol,\n",
-    "    organism=(  # optionally, globally set organism via lb.settings.organism = \"human\"\n",
+    "    field=bt.Gene.symbol,\n",
+    "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     "        \"human\"\n",
     "    ),\n",
     ")\n",
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_type_records = lb.CellType.from_values(adata.obs[\"cell_type_celltypist\"])\n",
+    "cell_type_records = bt.CellType.from_values(adata.obs[\"cell_type_celltypist\"])\n",
     "artifact.labels.add(cell_type_records, features.cell_type_celltypist)"
    ]
   },
@@ -383,19 +383,19 @@
    "source": [
     "degs_up_featureset = ln.FeatureSet.from_values(\n",
     "    degs_up.names,\n",
-    "    lb.Gene.symbol,\n",
+    "    bt.Gene.symbol,\n",
     "    name=\"Up-regulated DEGs STIM vs CTRL\",\n",
     "    type=\"category\",\n",
-    "    organism=(  # optionally, globally set organism via lb.settings.organism = \"human\"\n",
+    "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     "        \"human\"\n",
     "    ),\n",
     ")\n",
     "degs_dw_featureset = ln.FeatureSet.from_values(\n",
     "    degs_dw.names,\n",
-    "    lb.Gene.symbol,\n",
+    "    bt.Gene.symbol,\n",
     "    name=\"Down-regulated DEGs STIM vs CTRL\",\n",
     "    type=\"category\",\n",
-    "    organism=(  # optionally, globally set organism via lb.settings.organism = \"human\"\n",
+    "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     "        \"human\"\n",
     "    ),\n",
     ")\n",
@@ -439,8 +439,8 @@
     "]\n",
     "\n",
     "# get pathway records\n",
-    "enr_up_top10_pathways = lb.Pathway.from_values(enr_up_top10, lb.Pathway.ontology_id)\n",
-    "enr_dw_top10_pathways = lb.Pathway.from_values(enr_dw_top10, lb.Pathway.ontology_id)"
+    "enr_up_top10_pathways = bt.Pathway.from_values(enr_up_top10, bt.Pathway.ontology_id)\n",
+    "enr_dw_top10_pathways = bt.Pathway.from_values(enr_dw_top10, bt.Pathway.ontology_id)"
    ]
   },
   {
@@ -498,7 +498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellType.filter(name__contains=\"B cell\").df().head()"
+    "bt.CellType.filter(name__contains=\"B cell\").df().head()"
    ]
   },
   {
@@ -514,7 +514,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltypes = lb.CellType.lookup()\n",
+    "celltypes = bt.CellType.lookup()\n",
     "celltypes.tem_trm_cytotoxic_t_cells"
    ]
   },
@@ -547,7 +547,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.Pathway.filter(name__contains=\"interferon-beta\").df()"
+    "bt.Pathway.filter(name__contains=\"interferon-beta\").df()"
    ]
   },
   {
@@ -563,7 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.Pathway.filter(genes__symbol=\"KIR2DL1\").df()"
+    "bt.Pathway.filter(genes__symbol=\"KIR2DL1\").df()"
    ]
   },
   {
@@ -595,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway = lb.Pathway.filter(ontology_id=\"GO:0035456\").one()\n",
+    "pathway = bt.Pathway.filter(ontology_id=\"GO:0035456\").one()\n",
     "pathway"
    ]
   },
