--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "import lamindb as ln\n",
     "from pathlib import Path\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "import pandas as pd\n",
     "import anndata as ad"
    ]
@@ -279,10 +279,10 @@
    },
    "outputs": [],
    "source": [
-    "genes = lb.Gene.from_values(\n",
+    "genes = bt.Gene.from_values(\n",
     "    adata.var.index,\n",
-    "    lb.Gene.stable_id,\n",
-    "    organism=\"saccharomyces cerevisiae\",  # or set globally with lb.settings.organism\n",
+    "    bt.Gene.stable_id,\n",
+    "    organism=\"saccharomyces cerevisiae\",  # or set globally with bt.settings.organism\n",
     ")"
    ]
   },
@@ -309,8 +309,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "efs = lb.ExperimentalFactor.lookup()\n",
-    "organism = lb.Organism.lookup()\n",
+    "efs = bt.ExperimentalFactor.lookup()\n",
+    "organism = bt.Organism.lookup()\n",
     "features = ln.Feature.lookup()"
    ]
   },
@@ -323,7 +323,7 @@
     "curated_file = ln.Artifact.from_anndata(\n",
     "    adata,\n",
     "    description=\"Curated bulk RNA counts\",\n",
-    "    field=lb.Gene.stable_id,\n",
+    "    field=bt.Gene.stable_id,\n",
     "    organism=\"saccharomyces cerevisiae\",\n",
     ")"
    ]
@@ -423,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genes = lb.Gene.lookup()"
+    "genes = bt.Gene.lookup()"
    ]
   },
   {
