--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "import pandas as pd"
    ]
   },
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public ontology accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/lnschema_bionty.dev.publicontology) object, which you can think about as a public registry:"
+    "Let us create a public ontology accessor with {meth}`~docs:bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/bionty.dev.publicontology) object, which you can think about as a public registry:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "public = lb.CellMarker.public(organism=\"human\")\n",
+    "public = bt.CellMarker.public(organism=\"human\")\n",
     "public"
    ]
   },
@@ -377,7 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.PublicSource.filter(entity=\"CellMarker\").df()"
+    "bt.PublicSource.filter(entity=\"CellMarker\").df()"
    ]
   },
   {
@@ -393,10 +393,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "public_source = lb.PublicSource.filter(\n",
+    "public_source = bt.PublicSource.filter(\n",
     "    source=\"cellmarker\", version=\"2.0\", organism=\"human\"\n",
     ").one()\n",
-    "public = lb.CellMarker.public(public_source=public_source)\n",
+    "public = bt.CellMarker.public(public_source=public_source)\n",
     "public"
    ]
   },
@@ -417,7 +417,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.PublicSource.filter(currently_used=True).df()"
+    "bt.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
