--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -68,10 +68,10 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "import gseapy as gp\n",
     "\n",
-    "lb.settings.organism = \"human\"  # globally set organism"
+    "bt.settings.organism = \"human\"  # globally set organism"
    ]
   },
   {
@@ -173,7 +173,7 @@
    },
    "outputs": [],
    "source": [
-    "bionty = lb.Pathway.public()"
+    "bionty = bt.Pathway.public()"
    ]
   },
   {
@@ -215,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_records = lb.Pathway.from_values(go_bp_parsed.keys(), lb.Pathway.ontology_id)"
+    "pathway_records = bt.Pathway.from_values(go_bp_parsed.keys(), bt.Pathway.ontology_id)"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.Pathway.from_public(ontology_id=\"GO:0015868\")"
+    "bt.Pathway.from_public(ontology_id=\"GO:0015868\")"
    ]
   },
   {
@@ -271,7 +271,7 @@
    },
    "outputs": [],
    "source": [
-    "gene_records = lb.Gene.from_values(all_genes, lb.Gene.symbol)"
+    "gene_records = bt.Gene.from_values(all_genes, bt.Gene.symbol)"
    ]
   },
   {
