--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -75,10 +75,10 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "import readfcs\n",
     "\n",
-    "lb.settings.organism = \"human\"  # globally set organism to human"
+    "bt.settings.organism = \"human\"  # globally set organism to human"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we validate features in `.var` using {class}`~docs:lnschema_bionty.CellMarker`:"
+    "First, we validate features in `.var` using {class}`~docs:bionty.CellMarker`:"
    ]
   },
   {
@@ -255,7 +255,7 @@
    },
    "outputs": [],
    "source": [
-    "validated = lb.CellMarker.validate(adata.var.index)"
+    "validated = bt.CellMarker.validate(adata.var.index)"
    ]
   },
   {
@@ -275,8 +275,8 @@
    },
    "outputs": [],
    "source": [
-    "adata.var.index = lb.CellMarker.standardize(adata.var.index)\n",
-    "validated = lb.CellMarker.validate(adata.var.index)"
+    "adata.var.index = bt.CellMarker.standardize(adata.var.index)\n",
+    "validated = bt.CellMarker.validate(adata.var.index)"
    ]
   },
   {
@@ -311,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = lb.CellMarker.validate(adata.var.index)\n",
+    "validated = bt.CellMarker.validate(adata.var.index)\n",
     "assert all(validated)  # all markers are validated"
    ]
   },
@@ -354,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.ExperimentalFactor.public().search(\"FACS\").head(2)  # search the public ontology"
+    "bt.ExperimentalFactor.public().search(\"FACS\").head(2)  # search the public ontology"
    ]
   },
   {
@@ -371,7 +371,7 @@
    "outputs": [],
    "source": [
     "# import the FACS record from the public ontology and save it to the registry\n",
-    "facs = lb.ExperimentalFactor.from_public(ontology_id=\"EFO:0009108\")\n",
+    "facs = bt.ExperimentalFactor.from_public(ontology_id=\"EFO:0009108\")\n",
     "facs.save()"
    ]
   },
@@ -388,9 +388,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cytof = lb.ExperimentalFactor(name=\"CyTOF\")\n",
+    "cytof = bt.ExperimentalFactor(name=\"CyTOF\")\n",
     "cytof.save()\n",
-    "is_cytometry_assay = lb.ExperimentalFactor(name=\"is_cytometry_assay\")\n",
+    "is_cytometry_assay = bt.ExperimentalFactor(name=\"is_cytometry_assay\")\n",
     "is_cytometry_assay.save()\n",
     "cytof.parents.add(is_cytometry_assay)\n",
     "facs.parents.add(is_cytometry_assay)\n",
@@ -411,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.ExperimentalFactor.df()"
+    "bt.ExperimentalFactor.df()"
    ]
   },
   {
@@ -429,8 +429,8 @@
    "outputs": [],
    "source": [
     "features = ln.Feature.lookup()\n",
-    "experimental_factors = lb.ExperimentalFactor.lookup()\n",
-    "organisms = lb.Organism.lookup()"
+    "experimental_factors = bt.ExperimentalFactor.lookup()\n",
+    "organisms = bt.Organism.lookup()"
    ]
   },
   {
@@ -442,7 +442,7 @@
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.from_anndata(\n",
-    "    adata, description=\"Alpert19\", field=lb.CellMarker.name\n",
+    "    adata, description=\"Alpert19\", field=bt.CellMarker.name\n",
     ")"
    ]
   },
