--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -32,10 +32,10 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "import readfcs\n",
     "\n",
-    "lb.settings.organism = \"human\""
+    "bt.settings.organism = \"human\""
    ]
   },
   {
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = lb.CellMarker.validate(adata.var.index)"
+    "validated = bt.CellMarker.validate(adata.var.index)"
    ]
   },
   {
@@ -188,8 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.var.index = lb.CellMarker.standardize(adata.var.index)\n",
-    "validated = lb.CellMarker.validate(adata.var.index)"
+    "adata.var.index = bt.CellMarker.standardize(adata.var.index)\n",
+    "validated = bt.CellMarker.validate(adata.var.index)"
    ]
   },
   {
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "records = lb.CellMarker.from_values(adata.var.index[~validated])\n",
+    "records = bt.CellMarker.from_values(adata.var.index[~validated])\n",
     "ln.save(records)"
    ]
   },
@@ -222,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker(name=\"CD14/19\").save()"
+    "bt.CellMarker(name=\"CD14/19\").save()"
    ]
   },
   {
@@ -238,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = lb.CellMarker.validate(adata.var.index)\n",
+    "validated = bt.CellMarker.validate(adata.var.index)\n",
     "adata.obs = adata[:, ~validated].to_df()\n",
     "adata = adata[:, validated].copy()"
    ]
@@ -258,7 +258,7 @@
    },
    "outputs": [],
    "source": [
-    "validated = lb.CellMarker.validate(adata.var.index)\n",
+    "validated = bt.CellMarker.validate(adata.var.index)\n",
     "assert all(validated)"
    ]
   },
@@ -276,9 +276,9 @@
    "outputs": [],
    "source": [
     "features = ln.Feature.lookup()\n",
-    "efs = lb.ExperimentalFactor.lookup()\n",
-    "organism = lb.Organism.lookup()\n",
-    "markers = lb.CellMarker.lookup()"
+    "efs = bt.ExperimentalFactor.lookup()\n",
+    "organism = bt.Organism.lookup()\n",
+    "markers = bt.CellMarker.lookup()"
    ]
   },
   {
@@ -294,7 +294,7 @@
     "artifact = ln.Artifact.from_anndata(\n",
     "    adata,\n",
     "    description=\"Oetjen18_t1\",\n",
-    "    field=lb.CellMarker.name,\n",
+    "    field=bt.CellMarker.name,\n",
     ")"
    ]
   },
