--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb"
+    "import bionty as bt"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.df().head()"
+    "bt.CellMarker.df().head()"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.search(\"PD-1\").head(2)"
+    "bt.CellMarker.search(\"PD-1\").head(2)"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = lb.CellMarker.lookup()\n",
+    "markers = bt.CellMarker.lookup()\n",
     "\n",
     "markers.cd8"
    ]
