--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "\n",
     "ln.track()"
    ]
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = lb.CellMarker.lookup()"
+    "markers = bt.CellMarker.lookup()"
    ]
   },
   {
