--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -57,9 +57,9 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "\n",
-    "lb.settings.organism = \"human\""
+    "bt.settings.organism = \"human\""
    ]
   },
   {
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.Gene.validate(mdata[\"rna\"].var_names, lb.Gene.symbol);"
+    "bt.Gene.validate(mdata[\"rna\"].var_names, bt.Gene.symbol);"
    ]
   },
   {
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genes = lb.Gene.from_values(mdata[\"rna\"].var_names, lb.Gene.symbol)\n",
+    "genes = bt.Gene.from_values(mdata[\"rna\"].var_names, bt.Gene.symbol)\n",
     "ln.save(genes)"
    ]
   },
@@ -191,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdata[\"rna\"].var_names = lb.Gene.standardize(mdata[\"rna\"].var_names, lb.Gene.symbol)"
+    "mdata[\"rna\"].var_names = bt.Gene.standardize(mdata[\"rna\"].var_names, bt.Gene.symbol)"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = lb.Gene.validate(mdata[\"rna\"].var_names, lb.Gene.symbol)"
+    "validated = bt.Gene.validate(mdata[\"rna\"].var_names, bt.Gene.symbol)"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_genes = [lb.Gene(symbol=symbol) for symbol in mdata[\"rna\"].var_names[~validated]]\n",
+    "new_genes = [bt.Gene(symbol=symbol) for symbol in mdata[\"rna\"].var_names[~validated]]\n",
     "ln.save(new_genes)"
    ]
   },
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.Gene.validate(mdata[\"rna\"].var_names, lb.Gene.symbol);"
+    "bt.Gene.validate(mdata[\"rna\"].var_names, bt.Gene.symbol);"
    ]
   },
   {
@@ -229,7 +229,7 @@
    "outputs": [],
    "source": [
     "feature_set_rna = ln.FeatureSet.from_values(\n",
-    "    mdata[\"rna\"].var_names, field=lb.Gene.symbol\n",
+    "    mdata[\"rna\"].var_names, field=bt.Gene.symbol\n",
     ")"
    ]
   },
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.validate(mdata[\"adt\"].var_names);"
+    "bt.CellMarker.validate(mdata[\"adt\"].var_names);"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = lb.CellMarker.from_values(mdata[\"adt\"].var_names)\n",
+    "markers = bt.CellMarker.from_values(mdata[\"adt\"].var_names)\n",
     "ln.save(markers)"
    ]
   },
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.validate(mdata[\"adt\"].var_names);"
+    "bt.CellMarker.validate(mdata[\"adt\"].var_names);"
    ]
   },
   {
@@ -284,7 +284,7 @@
    "outputs": [],
    "source": [
     "feature_set_adt = ln.FeatureSet.from_values(\n",
-    "    mdata[\"adt\"].var_names, field=lb.CellMarker.name\n",
+    "    mdata[\"adt\"].var_names, field=bt.CellMarker.name\n",
     ")"
    ]
   },
@@ -371,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_targets = lb.Gene.from_values(obs[\"gene_target\"], lb.Gene.symbol)\n",
+    "gene_targets = bt.Gene.from_values(obs[\"gene_target\"], bt.Gene.symbol)\n",
     "ln.save(gene_targets)\n",
     "features = ln.Feature.lookup()\n",
     "artifact.labels.add(gene_targets, feature=features.gene_target)"
