--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "import matplotlib.pyplot as plt\n",
     "import scanpy as sc"
    ]
@@ -150,7 +150,7 @@
     "file_ad = ln.Artifact.from_anndata(\n",
     "    adata,\n",
     "    description=\"Suo22 Visium10X image F121_LP1_4LIV\",\n",
-    "    field=lb.Gene.ensembl_gene_id,\n",
+    "    field=bt.Gene.ensembl_gene_id,\n",
     "    organism=\"human\",\n",
     ")\n",
     "file_ad.save()"
