--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -53,10 +53,10 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "from lamin_utils import logger\n",
     "\n",
-    "lb.settings.auto_save_parents = False"
+    "bt.settings.auto_save_parents = False"
    ]
   },
   {
@@ -98,10 +98,10 @@
     "    adata = ln.dev.datasets.anndata_with_obs()\n",
     "\n",
     "    # validate and register features\n",
-    "    genes = lb.Gene.from_values(\n",
+    "    genes = bt.Gene.from_values(\n",
     "        adata.var_names,\n",
-    "        lb.Gene.ensembl_gene_id,\n",
-    "        organism=(  # optionally, globally set organism via lb.settings.organism = \"human\"\n",
+    "        bt.Gene.ensembl_gene_id,\n",
+    "        organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     "            \"human\"\n",
     "        ),\n",
     "    )\n",
@@ -110,19 +110,19 @@
     "    ln.save(obs_features)\n",
     "\n",
     "    # validate and register labels\n",
-    "    cell_types = lb.CellType.from_values(adata.obs[\"cell_type\"])\n",
+    "    cell_types = bt.CellType.from_values(adata.obs[\"cell_type\"])\n",
     "    ln.save(cell_types)\n",
-    "    tissues = lb.Tissue.from_values(adata.obs[\"tissue\"])\n",
+    "    tissues = bt.Tissue.from_values(adata.obs[\"tissue\"])\n",
     "    ln.save(tissues)\n",
-    "    diseases = lb.Disease.from_values(adata.obs[\"disease\"])\n",
+    "    diseases = bt.Disease.from_values(adata.obs[\"disease\"])\n",
     "    ln.save(diseases)\n",
     "\n",
     "    # register artifact and annotate with features & labels\n",
     "    artifact = ln.Artifact.from_anndata(\n",
     "        adata,\n",
     "        description=\"anndata with obs\",\n",
-    "        field=lb.Gene.ensembl_gene_id,\n",
-    "        organism=(  # optionally, globally set organism via lb.settings.organism = \"human\"\n",
+    "        field=bt.Gene.ensembl_gene_id,\n",
+    "        organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     "            \"human\"\n",
     "        ),\n",
     "    )\n",
@@ -269,8 +269,8 @@
     "file_subset = ln.Artifact.from_anndata(\n",
     "    adata_subset.to_memory(),\n",
     "    description=\"anndata with obs subset\",\n",
-    "    field=lb.Gene.ensembl_gene_id,\n",
-    "    organism=(  # optionally, globally set organism via lb.settings.organism = \"human\"\n",
+    "    field=bt.Gene.ensembl_gene_id,\n",
+    "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     "        \"human\"\n",
     "    ),\n",
     ")"
@@ -319,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_types = lb.CellType.lookup()"
+    "cell_types = bt.CellType.lookup()"
    ]
   },
   {
