--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lamindb provides access to the following public cell marker ontologies through [lnschema-bionty](https://github.com/laminlabs/lnschema-bionty):\n",
+    "lamindb provides access to the following public cell marker ontologies through [bionty](https://github.com/laminlabs/bionty):\n",
     "\n",
     "1. [CellMarker](http://xteam.xbio.top/CellMarker)\n",
     "\n",
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public ontology accessor with {meth}`~docs:bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/bionty.dev.publicontology) object, which you can think about as a public registry:"
+    "Let us create a public ontology accessor with {meth}`~bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/bionty.dev.publicontology) object, which you can think about as a public registry:"
    ]
   },
   {
