--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -66,7 +66,8 @@
    },
    "outputs": [],
    "source": [
-    "!lamin init --storage ./mydata"
+    "!lamin login testuser1\n",
+    "!lamin init --storage ./test-project-flow"
    ]
   },
   {
@@ -668,8 +669,8 @@
    "outputs": [],
    "source": [
     "!lamin login testuser1\n",
-    "!lamin delete --force mydata\n",
-    "!rm -r ./mydata"
+    "!lamin delete --force test-project-flow\n",
+    "!rm -r ./test-project-flow"
    ]
   }
  ],
