--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -11,27 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lamindb provides access to the following public cell marker ontologies through [bionty](https://github.com/laminlabs/bionty):\n",
+    "lamindb provides access to the following public cell marker ontologies through [bionty](https://lamin.ai/docs/bionty):\n",
     "\n",
     "1. [CellMarker](http://xteam.xbio.top/CellMarker)\n",
     "\n",
     "Here we show how to access and search cell marker ontologies to standardize new data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!lamin init --storage ./test-cell-marker --schema bionty"
    ]
   },
   {
@@ -418,20 +402,6 @@
    "outputs": [],
    "source": [
     "bt.PublicSource.filter(currently_used=True).df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "!lamin delete --force test-cell-marker\n",
-    "!rm -r test-cell-marker"
    ]
   }
  ],
