--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "!lamin login testuser1\n",
-    "!lamin init --storage ./test-project-flow"
+    "!lamin init --storage ./mydata"
    ]
   },
   {
@@ -669,8 +669,8 @@
    "outputs": [],
    "source": [
     "!lamin login testuser1\n",
-    "!lamin delete --force test-project-flow\n",
-    "!rm -r ./test-project-flow"
+    "!lamin delete --force mydata\n",
+    "!rm -r ./mydata"
    ]
   }
  ],
