--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -66,6 +66,7 @@
    },
    "outputs": [],
    "source": [
+    "!lamin login testuser1\n",
     "!lamin init --storage ./mydata"
    ]
   },
@@ -689,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "1LCd8kco9lZU",
