--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -66,7 +66,7 @@
    },
    "outputs": [],
    "source": [
-    "# !lamin init --storage ./mydata"
+    "!lamin init --storage ./mydata"
    ]
   },
   {
@@ -83,8 +83,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "from IPython.display import Image, display\n",
-    "ln.setup.init(storage=\"./mydata\")"
+    "from IPython.display import Image, display"
    ]
   },
   {
