Remove celltypist mention agian
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Standardize metadata on-the-fly\n",
     "\n",
-    "This use cases runs on a LaminDB instance with populated `CellType` and `Pathway` registries. Make sure you run [CellTypist] and [GO Ontology](enrichr.ipynb) notebooks before executing this use case.\n",
+    "This use cases runs on a LaminDB instance with populated `CellType` and `Pathway` registries. Make sure you run the [GO Ontology](enrichr.ipynb) notebook before executing this use case.\n",
     "\n",
     "Here, we demonstrate how to standardize the metadata on-the-fly during cell type annotation and pathway enrichment analysis using these two registries.\n",
     "\n",
