--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -159,6 +159,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Register cell type of found synonym\n",
+    "pDC = bt.CellType.from_values(['plasmacytoid dendritic cell'])\n",
+    "pDC.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sc.pl.umap(\n",
     "    adata,\n",
     "    color=[\"cell_type_celltypist\", \"stim\"],\n",
@@ -515,7 +526,7 @@
    "outputs": [],
    "source": [
     "celltypes = bt.CellType.lookup()\n",
-    "celltypes.tem_trm_cytotoxic_t_cells"
+    "celltypes.plasmacytoid_dendritic_cell"
    ]
   },
   {
@@ -524,7 +535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Artifact.filter(cell_types=celltypes.tem_trm_cytotoxic_t_cells).df()"
+    "ln.Artifact.filter(cell_types=celltypes.plasmacytoid_dendritic_cell).df()"
    ]
   },
   {
@@ -657,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.7"
   },
   "nbproject": {
    "id": "hsPU1OENv0LS",
