--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -160,8 +160,7 @@
    "outputs": [],
    "source": [
     "# Register cell type of found synonym\n",
-    "pDC = bt.CellType.from_values(['plasmacytoid dendritic cell'])\n",
-    "pDC.save()"
+    "bt.CellType('plasmacytoid dendritic cell').save()"
    ]
   },
   {
