--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -160,7 +160,7 @@
    "outputs": [],
    "source": [
     "# Register cell type of found synonym\n",
-    "bt.CellType(name='plasmacytoid dendritic cell').save()"
+    "bt.CellType.from_public(name='plasmacytoid dendritic cell').save()"
    ]
   },
   {
