hide output of celltypist
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -115,7 +115,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "model = celltypist.models.Model.load(model=\"Immune_All_Low.pkl\")"
