--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.settings.set_figure_params(dpi=80, facecolor=\"white\")"
+    "sc.settings.set_figure_params(dpi=50, facecolor=\"white\")"
    ]
   },
   {
@@ -115,7 +115,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "model = celltypist.models.Model.load(model=\"Immune_All_Low.pkl\")"
@@ -151,6 +155,16 @@
     "adata.obs[\"cell_type_celltypist\"] = bt.CellType.standardize(\n",
     "    adata.obs[\"cell_type_celltypist\"]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Register cell type of found synonym\n",
+    "bt.CellType.from_public(name='plasmacytoid dendritic cell').save()"
    ]
   },
   {
@@ -515,7 +529,7 @@
    "outputs": [],
    "source": [
     "celltypes = bt.CellType.lookup()\n",
-    "celltypes.tem_trm_cytotoxic_t_cells"
+    "celltypes.plasmacytoid_dendritic_cell"
    ]
   },
   {
@@ -524,7 +538,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Artifact.filter(cell_types=celltypes.tem_trm_cytotoxic_t_cells).df()"
+    "ln.Artifact.filter(cell_types=celltypes.plasmacytoid_dendritic_cell).df()"
    ]
   },
   {
@@ -657,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.7"
   },
   "nbproject": {
    "id": "hsPU1OENv0LS",
