--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -122,6 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.transform.stem_uid = \"s5V0dNMVwL9i\"\n",
+    "ln.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
@@ -322,9 +324,7 @@
    "source": [
     "curated_file = ln.Artifact.from_anndata(\n",
     "    adata,\n",
-    "    description=\"Curated bulk RNA counts\",\n",
-    "    field=bt.Gene.stable_id,\n",
-    "    organism=\"saccharomyces cerevisiae\",\n",
+    "    description=\"Curated bulk RNA counts\"\n",
     ")"
    ]
   },
@@ -353,6 +353,15 @@
    "metadata": {},
    "source": [
     "Link to validated metadata records:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curated_file.features.add_from_anndata(field=bt.Gene.stable_id, organism=\"saccharomyces cerevisiae\")"
    ]
   },
   {
@@ -487,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "s5V0dNMVwL9i",
