--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -396,6 +396,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# track the current notebook as transform\n",
+    "ln.transform.stem_uid = \"1LCd8kco9lZU\"\n",
+    "ln.transform.version = \"0\"\n",
+    "ln.track()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -403,8 +415,6 @@
    },
    "outputs": [],
    "source": [
-    "# track the current notebook as transform\n",
-    "ln.track()\n",
     "artifact = ln.Artifact.filter(key__contains=\"figures/matrixplot\").one()\n",
     "artifact.stage()"
    ]
