--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -67,6 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.transform.stem_uid = \"daeFs3PkquDW\"\n",
+    "ln.transform.version = \"draft\"\n",
     "ln.track()"
    ]
   },
@@ -149,11 +151,10 @@
    "source": [
     "file_ad = ln.Artifact.from_anndata(\n",
     "    adata,\n",
-    "    description=\"Suo22 Visium10X image F121_LP1_4LIV\",\n",
-    "    field=bt.Gene.ensembl_gene_id,\n",
-    "    organism=\"human\",\n",
+    "    description=\"Suo22 Visium10X image F121_LP1_4LIV\"\n",
     ")\n",
-    "file_ad.save()"
+    "file_ad.save()\n",
+    "file_ad.features.add_from_anndata(field=bt.Gene.ensembl_gene_id, organism=\"human\")"
    ]
   },
   {
@@ -215,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   },
   "nbproject": {
    "dependency": null,
