--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -101,10 +101,8 @@
     "    genes = bt.Gene.from_values(\n",
     "        adata.var_names,\n",
     "        bt.Gene.ensembl_gene_id,\n",
-    "        organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
-    "            \"human\"\n",
-    "        ),\n",
-    "    )\n",
+    "        organism=\"human\",\n",
+    "        )\n",
     "    ln.save(genes)\n",
     "    obs_features = ln.Feature.from_df(adata.obs)\n",
     "    ln.save(obs_features)\n",
@@ -120,13 +118,13 @@
     "    # register artifact and annotate with features & labels\n",
     "    artifact = ln.Artifact.from_anndata(\n",
     "        adata,\n",
-    "        description=\"anndata with obs\",\n",
-    "        field=bt.Gene.ensembl_gene_id,\n",
-    "        organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
-    "            \"human\"\n",
-    "        ),\n",
+    "        description=\"anndata with obs\"\n",
     "    )\n",
     "    artifact.save()\n",
+    "    artifact.features.add_from_anndata(\n",
+    "        field=bt.Gene.ensembl_gene_id,\n",
+    "        organism=\"human\",\n",
+    "    )\n",
     "    features = ln.Feature.lookup()\n",
     "    artifact.labels.add(cell_types, features.cell_type)\n",
     "    artifact.labels.add(tissues, features.tissue)\n",
@@ -157,6 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.transform.stem_uid = \"eNef4Arw8nNM\"\n",
+    "ln.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
@@ -268,11 +268,7 @@
    "source": [
     "file_subset = ln.Artifact.from_anndata(\n",
     "    adata_subset.to_memory(),\n",
-    "    description=\"anndata with obs subset\",\n",
-    "    field=bt.Gene.ensembl_gene_id,\n",
-    "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
-    "        \"human\"\n",
-    "    ),\n",
+    "    description=\"anndata with obs subset\"\n",
     ")"
    ]
   },
@@ -283,6 +279,18 @@
    "outputs": [],
    "source": [
     "file_subset.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_subset.features.add_from_anndata(\n",
+    "    field=bt.Gene.ensembl_gene_id,\n",
+    "    organism=\"human\",  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
+    "    )"
    ]
   },
   {
@@ -420,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "eNef4Arw8nNM",
