--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -87,6 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.transform.stem_uid = \"OWuTtS4SApon\"\n",
+    "ln.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
@@ -442,7 +444,7 @@
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.from_anndata(\n",
-    "    adata, description=\"Alpert19\", field=bt.CellMarker.name\n",
+    "    adata, description=\"Alpert19\"\n",
     ")"
    ]
   },
@@ -455,6 +457,15 @@
    "outputs": [],
    "source": [
     "artifact.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artifact.features.add_from_anndata(field=bt.CellMarker.name)"
    ]
   },
   {
@@ -651,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "OWuTtS4SApon",
