--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -44,6 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.transform.stem_uid = \"SmQmhrhigFPL\"\n",
+    "ln.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
@@ -293,8 +295,7 @@
    "source": [
     "artifact = ln.Artifact.from_anndata(\n",
     "    adata,\n",
-    "    description=\"Oetjen18_t1\",\n",
-    "    field=bt.CellMarker.name,\n",
+    "    description=\"Oetjen18_t1\"\n",
     ")"
    ]
   },
@@ -305,6 +306,15 @@
    "outputs": [],
    "source": [
     "artifact.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artifact.features.add_from_anndata(field=bt.CellMarker.name)"
    ]
   },
   {
@@ -467,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "SmQmhrhigFPL",
