--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -25,6 +25,8 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
+    "ln.transform.stem_uid = \"zzJzdgJ763Dy\"\n",
+    "ln.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
@@ -176,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "zzJzdgJ763Dy",
