--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -68,6 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.transform.stem_uid = \"yMWSFirS6qv2\"\n",
+    "ln.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
@@ -473,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "yMWSFirS6qv2",
