--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -339,7 +339,7 @@
    "outputs": [],
    "source": [
     "artifact.features.add_from_anndata(\n",
-    "    field=bt.Gene.symbol,\n",
+    "    var_field=bt.Gene.symbol,\n",
     "    organism=\"human\", # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     ")"
    ]
