--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -465,7 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.features.add_from_anndata(field=bt.CellMarker.name)"
+    "artifact.features.add_from_anndata(var_field=bt.CellMarker.name)"
    ]
   },
   {
