--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -122,7 +122,7 @@
     "    )\n",
     "    artifact.save()\n",
     "    artifact.features.add_from_anndata(\n",
-    "        field=bt.Gene.ensembl_gene_id,\n",
+    "        var_field=bt.Gene.ensembl_gene_id,\n",
     "        organism=\"human\",\n",
     "    )\n",
     "    features = ln.Feature.lookup()\n",
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "file_subset.features.add_from_anndata(\n",
-    "    field=bt.Gene.ensembl_gene_id,\n",
+    "    var_field=bt.Gene.ensembl_gene_id,\n",
     "    organism=\"human\",  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     "    )"
    ]
