--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -303,8 +303,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.features.add_feature_set(feature_set_rna, slot=\"rna\")\n",
-    "artifact.features.add_feature_set(feature_set_adt, slot=\"adt\")"
+    "artifact.features._add_feature_set(feature_set_rna, slot=\"rna\")\n",
+    "artifact.features._add_feature_set(feature_set_adt, slot=\"adt\")"
    ]
   },
   {
@@ -364,7 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.features.add_feature_set(feature_set_obs, slot=\"obs\")"
+    "artifact.features._add_feature_set(feature_set_obs, slot=\"obs\")"
    ]
   },
   {
