--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -57,6 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.transform.stem_uid = \"hsPU1OENv0LS\"\n",
+    "ln.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
@@ -326,12 +328,20 @@
     "artifact = ln.Artifact.from_anndata(\n",
     "    adata,\n",
     "    description=\"seurat_ifnb_activated_Bcells\",\n",
-    "    field=bt.Gene.symbol,\n",
-    "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
-    "        \"human\"\n",
-    "    ),\n",
     ")\n",
     "artifact.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artifact.features.add_from_anndata(\n",
+    "    var_field=bt.Gene.symbol,\n",
+    "    organism=\"human\", # optionally, globally set organism via bt.settings.organism = \"human\"\n",
+    ")"
    ]
   },
   {
@@ -415,8 +425,8 @@
     ")\n",
     "\n",
     "# Link feature sets to artifact\n",
-    "artifact.features.add_feature_set(degs_up_featureset, slot=\"STIM-up-DEGs\")\n",
-    "artifact.features.add_feature_set(degs_dw_featureset, slot=\"STIM-down-DEGs\")"
+    "artifact.features._add_feature_set(degs_up_featureset, slot=\"STIM-up-DEGs\")\n",
+    "artifact.features._add_feature_set(degs_dw_featureset, slot=\"STIM-down-DEGs\")"
    ]
   },
   {
@@ -671,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "hsPU1OENv0LS",
