--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -68,6 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.transform.stem_uid = \"yMWSFirS6qv2\"\n",
+    "ln.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
@@ -301,8 +303,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.features.add_feature_set(feature_set_rna, slot=\"rna\")\n",
-    "artifact.features.add_feature_set(feature_set_adt, slot=\"adt\")"
+    "artifact.features._add_feature_set(feature_set_rna, slot=\"rna\")\n",
+    "artifact.features._add_feature_set(feature_set_adt, slot=\"adt\")"
    ]
   },
   {
@@ -362,7 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.features.add_feature_set(feature_set_obs, slot=\"obs\")"
+    "artifact.features._add_feature_set(feature_set_obs, slot=\"obs\")"
    ]
   },
   {
@@ -473,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "yMWSFirS6qv2",
