💚 Fix ln.track(transform) calls

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -92,7 +92,7 @@
     "    transform = ln.Transform(\n",
     "        name=\"register example artifact\", type=\"pipeline\", version=\"0.0.1\"\n",
     "    )\n",
-    "    ln.track(transform)\n",
+    "    ln.track(transform=transform)\n",
     "\n",
     "    # an example dataset that has a few cell type, tissue and disease annotations\n",
     "    adata = ln.dev.datasets.anndata_with_obs()\n",
