--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -135,7 +135,7 @@
     "def run_upload_crispra_result_app():\n",
     "    ln.setup.login(\"testuser1\")\n",
     "    transform = ln.Transform(name=\"Upload GWS CRISPRa result\", type=\"app\")\n",
-    "    ln.track(transform)\n",
+    "    ln.track(transform=transform)\n",
     "    output_path = ln.dev.datasets.schmidt22_crispra_gws_IFNG(ln.settings.storage)\n",
     "    output_file = ln.Artifact(\n",
     "        output_path, description=\"Raw data of schmidt22 crispra GWS\"\n",
@@ -176,7 +176,7 @@
     "\n",
     "    # create a new transform to mimic a new notebook (in reality you just run ln.track() in a notebook)\n",
     "    transform = ln.Transform(name=\"GWS CRIPSRa analysis\", type=\"notebook\")\n",
-    "    ln.track(transform)\n",
+    "    ln.track(transform=transform)\n",
     "\n",
     "    # access the upload artifact\n",
     "    input_file = ln.Artifact.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()\n",
@@ -278,7 +278,7 @@
     "def run_scrna_analysis_pipeline():\n",
     "    ln.setup.login(\"testuser2\")\n",
     "    transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")\n",
-    "    ln.track(transform)\n",
+    "    ln.track(transform=transform)\n",
     "    # access uploaded files as inputs for the pipeline\n",
     "    input_artifacts = ln.Artifact.filter(key__startswith=\"fastq/perturbseq\").all()\n",
     "    input_paths = [artifact.stage() for artifact in input_artifacts]\n",
@@ -292,7 +292,7 @@
     "    transform = ln.Transform(\n",
     "        name=\"Postprocess Cell Ranger\", version=\"2.0\", type=\"pipeline\"\n",
     "    )\n",
-    "    ln.track(transform)\n",
+    "    ln.track(transform=transform)\n",
     "    input_artifacts = [f.stage() for f in output_artifacts]\n",
     "    output_path = ln.dev.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
     "    output_file = ln.Artifact(output_path, description=\"perturbseq counts\")\n",
@@ -351,7 +351,7 @@
     "        name=\"Perform single cell analysis, integrate with CRISPRa screen\",\n",
     "        type=\"notebook\",\n",
     "    )\n",
-    "    ln.track(transform)\n",
+    "    ln.track(transform=transform)\n",
     "\n",
     "    # access the output files of bfx pipeline and previous analysis\n",
     "    file_ps = ln.Artifact.filter(description__icontains=\"perturbseq\").one()\n",
