--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -237,7 +237,7 @@
     "    ln.setup.login(\"testuser1\")\n",
     "\n",
     "    # create a pipeline transform\n",
-    "    ln.track(ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\"))\n",
+    "    track(transform=ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\"))\n",
     "    # register output files of the sequencer\n",
     "    upload_dir = ln.dev.datasets.dir_scrnaseq_cellranger(\n",
     "        \"perturbseq\", basedir=ln.settings.storage, output_only=False\n",
