--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "# pretend we're running a bulk RNA-seq pipeline\n",
-    "track(transform=ln.Transform(name=\"nf-core RNA-seq\", reference=\"https://nf-co.re/rnaseq\"))\n",
+    "ln.track(transform=ln.Transform(name=\"nf-core RNA-seq\", reference=\"https://nf-co.re/rnaseq\"))\n",
     "# create a directory for its output\n",
     "Path(\"./test-bulkrna/output_dir\").mkdir(exist_ok=True)\n",
     "# get the count matrix\n",
