--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -95,7 +95,7 @@
     "    ln.track(transform=transform)\n",
     "\n",
     "    # an example dataset that has a few cell type, tissue and disease annotations\n",
-    "    adata = ln.dev.datasets.anndata_with_obs()\n",
+    "    adata = ln.core.datasets.anndata_with_obs()\n",
     "\n",
     "    # validate and register features\n",
     "    genes = bt.Gene.from_values(\n",
