--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_path = ln.dev.datasets.file_tiff_suo22()\n",
+    "img_path = ln.core.datasets.file_tiff_suo22()\n",
     "img = plt.imread(img_path)\n",
     "plt.imshow(img)\n",
     "plt.show()"
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = ln.dev.datasets.anndata_suo22_Visium10X()\n",
+    "adata = ln.core.datasets.anndata_suo22_Visium10X()\n",
     "# subset to the same image\n",
     "adata = adata[adata.obs[\"img_id\"] == \"F121_LP1_4LIV\"].copy()\n",
     "adata"
