--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -104,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "mdata = ln.dev.datasets.mudata_papalexi21_subset()\n",
+    "mdata = ln.core.datasets.mudata_papalexi21_subset()\n",
     "mdata"
    ]
   },
