--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -136,7 +136,7 @@
     "    ln.setup.login(\"testuser1\")\n",
     "    transform = ln.Transform(name=\"Upload GWS CRISPRa result\", type=\"app\")\n",
     "    ln.track(transform=transform)\n",
-    "    output_path = ln.coree.datasets.schmidt22_crispra_gws_IFNG(ln.settings.storage)\n",
+    "    output_path = ln.core.datasets.schmidt22_crispra_gws_IFNG(ln.settings.storage)\n",
     "    output_file = ln.Artifact(\n",
     "        output_path, description=\"Raw data of schmidt22 crispra GWS\"\n",
     "    )\n",
