--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -123,7 +123,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.coreeee.datasets.file_fcs_alpert19(populate_registries=True)"
+    "ln.core.datasets.file_fcs_alpert19(populate_registries=True)"
    ]
   },
   {
