--- a/docs/validator.ipynb
+++ b/docs/validator.ipynb
@@ -66,7 +66,7 @@
     "import bionty as bt\n",
     "import pandas as pd\n",
     "import anndata as ad\n",
-    "from lamin_validator import Validator, AnnDataValidator\n",
+    "from lamindb.validation import Validator, AnnDataValidator\n",
     "\n",
     "ln.settings.verbosity = \"hint\""
    ]
