--- a/docs/validator.ipynb
+++ b/docs/validator.ipynb
@@ -379,6 +379,7 @@
     "    adata, \n",
     "    obs_fields=fields, \n",
     "    var_field=bt.Gene.symbol, # specify the field for the var\n",
+    "    organism=\"human\",\n",
     "    )"
    ]
   },
@@ -389,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.validate(organism=\"human\")"
+    "validator.validate()"
    ]
   },
   {
