🎨 Use validator for scrna (#110)

--- a/docs/validate.ipynb
+++ b/docs/validate.ipynb
@@ -29,7 +29,7 @@
     ":maxdepth: 1\n",
     ":hidden:\n",
     "\n",
-    "validate\n",
+    "can-validate\n",
     "```"
    ]
   },
@@ -66,7 +66,6 @@
     "import bionty as bt\n",
     "import pandas as pd\n",
     "import anndata as ad\n",
-    "from lamindb.validation import Validator, AnnDataValidator\n",
     "\n",
     "ln.settings.verbosity = \"hint\""
    ]
@@ -147,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = Validator(df, fields=fields)"
+    "validator = ln.Validate.from_df(df, fields=fields)"
    ]
   },
   {
@@ -192,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = Validator(\n",
+    "validator = ln.Validate.from_df(\n",
     "    df, \n",
     "    fields=fields, \n",
     "    using=\"laminlabs/cellxgene\",  # pass the instance slug\n",
@@ -346,11 +345,11 @@
    "id": "b9d09a10",
    "metadata": {},
    "source": [
-    "## AnnData Validator\n",
+    "## Validate an AnnData object\n",
     "\n",
     "We offer an AnnData specific validator that is aware of the variables in addition to the observations DataFrame.\n",
     "\n",
-    "Here create a `AnnDataValidator` object where we specify which `var_fields` and `obs_fields` to validate against."
+    "Here we specify which `var_fields` and `obs_fields` to validate against."
    ]
   },
   {
@@ -375,10 +374,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = AnnDataValidator(\n",
+    "validator = ln.Validate.from_anndata(\n",
     "    adata, \n",
     "    obs_fields=fields, \n",
     "    var_field=bt.Gene.symbol, # specify the field for the var\n",
+    "    organism=\"human\",\n",
     "    )"
    ]
   },
@@ -389,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.validate(organism=\"human\")"
+    "validator.validate()"
    ]
   },
   {
