🚚 Rename register_labels to update_registry

--- a/docs/validate.ipynb
+++ b/docs/validate.ipynb
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.register_labels(\"cell_type\")"
+    "validator.update_registry(\"cell_type\")"
    ]
   },
   {
@@ -281,7 +281,7 @@
     "# fix the typo\n",
     "df[\"cell_type\"] = df[\"cell_type\"].replace({\"cerebral pyramidal neuron\": cell_types.cerebral_cortex_pyramidal_neuron.name})\n",
     "\n",
-    "validator.register_labels(\"cell_type\")"
+    "validator.update_registry(\"cell_type\")"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.register_labels(\"donor\")"
+    "validator.update_registry(\"donor\")"
    ]
   },
   {
@@ -309,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.register_labels(\"donor\", validated_only=False)"
+    "validator.update_registry(\"donor\", validated_only=False)"
    ]
   },
   {
@@ -399,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.register_labels(\"all\")"
+    "validator.update_registry(\"all\")"
    ]
   },
   {
